--- a/acts/index.html
+++ b/acts/index.html
@@ -289,6 +289,18 @@
                 <a href="https://www.worldscientific.com/doi/10.1142/9781800613706_0001" target="_blank">Machine learning meets number theory: The data science of 
                 Birch–Swinnerton-Dyer</a>
             </li>
+            <li>
+                <a href="https://www.giannigastaldi.com/assets/pdf/slides/gastaldi_230502_cph.pdf" target="_blank">Understanding Language (Models)-AI Language Models From a 
+                    Structuralist Perspective</a>
+            </li>
+            <li>
+                <a href="https://www.giannigastaldi.com/assets/pdf/slides/gastaldi_170403_cohn.pdf" target="_blank">The Language of Mathematics-Epistemological Consequences
+                    of Applying AI Methods to Mathematics</a>
+            </li>
+             <li>
+                <a href="https://www.giannigastaldi.com/assets/pdf/slides/gastaldi_230215_cmu.pdf" target="_blank">Peeking into the AI Language Modeling Black Box</a>
+            </li>
+            <li><a href="/acts/24/Qu-20240411.pdf" target="_blank">Slides</a></li>
         </div>
     </p>
 
