--- a/grad/index.html
+++ b/grad/index.html
@@ -371,7 +371,13 @@
     <p>
         Jun 14, '24, 
         <b>Zhonglin Wu</b>, 
+        <a onclick="toggle_visibility('24');">
         <i>On "Secondary power operations and the Brown–Peterson spectrum at the prime 2", II</i></a><br />
+        <div id="24" class="toshow" style="display:none">
+            <li><a href="24spr/0614-Wu-blank.pdf" target="_blank">Blank Slides</a></li>
+
+            <li><a href="24spr/0614-Wu-withnotes.pdf" target="_blank">Slides with Notes</a></li>
+        </div>
     </p>
 
     <p>
