--- a/grad/index.html
+++ b/grad/index.html
@@ -365,15 +365,27 @@
     <p>
         Jun 4, '24, 
         <b>Zhonglin Wu</b>, 
+        <a onclick="toggle_visibility('24');">
         <i>On "Secondary power operations and the Brown–Peterson spectrum at the prime 2"</i></a><br />
+        <div id="24" class="toshow" style="display:none">
+            <li> Understanding whether an $E_{\infty}$ structure exists on the Brown-Peterson spectra can enhance our comprehension of many other spectra in chromatic homotopy theory. In 2018, Tyler Lawson disproved the existence of an $E_{\infty}$ structure on the mod 2 Brown-Peterson spectrum. However, there are interesting insights to be gained from the proof process, which can help us better understand how to use secondary operations.
+
+                The talk is divided into two parts. The first part sets up the foundemental knowledge, focusing mainly on constructing secondary operations and providing a brief introduction to Dyer-Lashof operations. The second part demonstrates how to construct a specific secondary operation and use it to disprove the existence of an on the Brown-Peterson spectrum structure on the mod 2 Brown-Peterson spectrum.
+            </li>
+        </div>
     </p>
     
     <p>
         Jun 14, '24, 
         <b>Zhonglin Wu</b>, 
-        <a onclick="toggle_visibility('24');">
+        <a onclick="toggle_visibility('25');">
         <i>On "Secondary power operations and the Brown–Peterson spectrum at the prime 2", II</i></a><br />
-        <div id="24" class="toshow" style="display:none">
+        <div id="25" class="toshow" style="display:none">
+            <li> Understanding whether an $E_{\infty}$ structure exists on the Brown-Peterson spectra can enhance our comprehension of many other spectra in chromatic homotopy theory. In 2018, Tyler Lawson disproved the existence of an $E_{\infty}$ structure on the mod 2 Brown-Peterson spectrum. However, there are interesting insights to be gained from the proof process, which can help us better understand how to use secondary operations.
+
+                The tall is divided into two parts. The first part sets up the foundemental knowledge, focusing mainly on constructing secondary operations and providing a brief introduction to Dyer-Lashof operations. The second part demonstrates how to construct a specific secondary operation and use it to disprove the existence of an on the Brown-Peterson spectrum structure on the mod 2 Brown-Peterson spectrum.
+            </li>
+            
             <li><a href="24spr/0614-Wu-blank.pdf" target="_blank">Blank Slides</a></li>
 
             <li><a href="24spr/0614-Wu-withnotes.pdf" target="_blank">Slides with Notes</a></li>
