--- a/undergrad/index.html
+++ b/undergrad/index.html
@@ -146,9 +146,12 @@
 
     <p>
         This is an undergraduate student seminar on geometry and topology.  
+        <a href="GT-student-seminar.pdf" target="_blank">Here</a> is a course description for you to get an idea of how it runs and particularly for those who wish to register for credit.  
+        <!--
         The tentative plan for this semester is that we take a break, 
         but check out the <a href="/acts" title="" target="_blank">Applied and Computational Topology Seminar</a> if you are interested.  
-        If you wish to propose a topic in geometry and topology for now or the future, write to <a href="mailto:zhuyf@sustech.edu.cn">Yifei Zhu</a>.  
+        -->
+        If you would like to propose a topic in geometry and topology for now or the future, write to <a href="mailto:zhuyf@sustech.edu.cn">Yifei Zhu</a>.  
         <!--
         This semester, our main theme will be modular curves, with Diamond and Shurman's <a href="https://doi.org/10.1007/978-0-387-27226-9" target="_blank">A first course in modular forms</a> (from Chapter 6 on) as a main reference.  
         Other useful resources include Milne's <a href="https://www.jmilne.org/math/CourseNotes/mf.html" target="_blank">notes</a> as well as a recent introductory, motivating 
@@ -162,7 +165,13 @@
         <!--
         We meet on <b>Thursdays 9–11 am in M5024</b>.  
         -->
-        <a href="GT-student-seminar.pdf" target="_blank">Here</a> is a course description for those who wish to register for credit.  
+        A possible theme for Fall 2024 is the mathematics and physics of <a href="https://www.researchgate.net/figure/The-spectral-data-of-a-Higgs-bundle-ph-encodes-a-line-bundle-L-on-a-branched-cover-S-C_fig3_358261134" target="_blank">Higgs bundles</a>.  
+        References include Laura Schaposnik's <a href="https://arxiv.org/abs/1907.09800" target="_blank">lecture notes</a> from a 
+        summer school on <a href="https://bookstore.ams.org/view?ProductCode=PCMS/28" target="_blank">quantum field theory and manifold invariants</a> 
+        (the book contains other topics of interest as well) and 
+        her <a href="https://www.ams.org/journals/notices/202005/rnoti-p625.pdf" target="_blank">expository article</a> for the Notices of the AMS.  
+        See <a href="https://yifeizhu.github.io/Chongli.pdf" target="_blank">here</a> for some more motivations.  
+        If you are thinking about participating, let me know what you think.  
     </p>
 
 
