--- a/undergrad/index.html
+++ b/undergrad/index.html
@@ -146,7 +146,7 @@
 
     <p>
         This is an undergraduate student seminar on geometry and topology.  
-        <a href="GT-student-seminar.pdf" target="_blank">Here</a> is a course description for you to get an idea of how it runs and particularly for those who wish to register for credit.  
+        <a href="GT-student-seminar.pdf" target="_blank">Here</a> is a course description for you to get an idea of how it runs and particularly for those of you who wish to register for credit.  
         <!--
         The tentative plan for this semester is that we take a break, 
         but check out the <a href="/acts" title="" target="_blank">Applied and Computational Topology Seminar</a> if you are interested.  
