--- a/undergrad/index.html
+++ b/undergrad/index.html
@@ -170,8 +170,9 @@
         summer school on <a href="https://bookstore.ams.org/view?ProductCode=PCMS/28" target="_blank">quantum field theory and manifold invariants</a> 
         (the book contains other topics of interest as well) and 
         her <a href="https://www.ams.org/journals/notices/202005/rnoti-p625.pdf" target="_blank">expository article</a> for the Notices of the AMS.  
-        See <a href="https://yifeizhu.github.io/Chongli.pdf" target="_blank">here</a> for some more motivations.  
-        If you are thinking about participating, let me know what you think.  
+        See <a href="https://yifeizhu.github.io/Chongli.pdf" target="_blank">here</a> for more motivations.  
+        Background materials can and should be supplemented according to participant needs.  
+        If you are thinking about getting involved, let us know what you think.  
     </p>
 
 
