--- a/undergrad/index.html
+++ b/undergrad/index.html
@@ -172,7 +172,7 @@
         her <a href="https://www.ams.org/journals/notices/202005/rnoti-p625.pdf" target="_blank">expository article</a> for the Notices of the AMS.  
         See <a href="https://yifeizhu.github.io/Chongli.pdf" target="_blank">here</a> for more motivations.  
         Background materials can and should be supplemented according to participant needs.  
-        If you are thinking about getting involved, let us know what you think.  
+        If you're thinking about getting involved, let us know what you think.  
     </p>
 
 
