--- a/undergrad/index.html
+++ b/undergrad/index.html
@@ -165,7 +165,7 @@
         <!--
         We meet on <b>Thursdays 9–11 am in M5024</b>.  
         -->
-        A possible theme for Fall 2024 is the mathematics and physics of <a href="https://www.researchgate.net/figure/The-spectral-data-of-a-Higgs-bundle-ph-encodes-a-line-bundle-L-on-a-branched-cover-S-C_fig3_358261134" target="_blank">Higgs bundles</a>.  
+        A possible theme for Fall 2024 is the geometry and physics of <a href="https://www.researchgate.net/figure/The-spectral-data-of-a-Higgs-bundle-ph-encodes-a-line-bundle-L-on-a-branched-cover-S-C_fig3_358261134" target="_blank">Higgs bundles</a>.  
         References include Laura Schaposnik's <a href="https://arxiv.org/abs/1907.09800" target="_blank">lecture notes</a> from a 
         summer school on <a href="https://bookstore.ams.org/view?ProductCode=PCMS/28" target="_blank">quantum field theory and manifold invariants</a> 
         (the book contains other topics of interest as well) and 
