--- a/undergrad/index.html
+++ b/undergrad/index.html
@@ -168,11 +168,11 @@
         A possible theme for Fall 2024 is the geometry and physics of <a href="https://www.researchgate.net/figure/The-spectral-data-of-a-Higgs-bundle-ph-encodes-a-line-bundle-L-on-a-branched-cover-S-C_fig3_358261134" target="_blank">Higgs bundles</a>.  
         References include Laura Schaposnik's <a href="https://arxiv.org/abs/1907.09800" target="_blank">lecture notes</a> from a 
         summer school on <a href="https://bookstore.ams.org/view?ProductCode=PCMS/28" target="_blank">quantum field theory and manifold invariants</a> 
-        (the book contains other topics of interest as well) and 
+        (this volume also contains other topics of interest) and 
         her <a href="https://www.ams.org/journals/notices/202005/rnoti-p625.pdf" target="_blank">expository article</a> for the Notices of the AMS.  
         See <a href="https://yifeizhu.github.io/Chongli.pdf" target="_blank">here</a> for more motivations.  
         Background materials can and should be supplemented according to participant needs.  
-        If you're thinking about getting involved, let us know what you think.  
+        If you're thinking about getting involved, let us know.  
     </p>
 
 
