--- a/undergrad/index.html
+++ b/undergrad/index.html
@@ -173,14 +173,14 @@
     </p>
 
     <p>
-        We meet on <b>Thursdays 4:20–6:10 pm in Lecture Hall 3-309</b>.  The first organizational meeting is tentatively scheduled on September 19.  To facilitate 
+        We meet on <b>Thursdays 4:20–6:10 pm in Lecture Hall 3-309</b>.  The first, organizational meeting is tentatively scheduled on September 19.  To facilitate 
         communication between participants, there is a QQ group: 811299006.  
     </p>
 
 
-<!--
 <h3><a id="T"></a>Talks</h3>
 
+<!--
     <p>
         MMM DD, 'YY, 
         <b>Speaker</b> (Affiliation if not SUSTech), 
@@ -194,7 +194,12 @@
     </p>
 -->
 
+    <p>
+        Sep 19, '24, 
+        <b>Organizational meeting</b>
+    </p>
 
+    
 <h3><a id="P"></a>Previous Semesters</h3>
     <li><a href="23fal" target="_blank">Fall 2023</a>, Modular curves</li>
     <li><a href="23spr/syllabus.pdf" target="_blank">Spring 2023</a>, Knot theory and low-dimensional topology</li>
