--- a/undergrad/index.html
+++ b/undergrad/index.html
@@ -83,6 +83,8 @@
 
                     <ul class="header__nav">
                         <li><a href="/index.html" target="_blank">Home</a></li>
+                        <li><a href="#A" target="_blank">About</a></li>
+                        <li><a href="#T" target="_blank">Talks</a></li>
                         <li><a href="#P">Previous Semesters</a></li>
                         <li><a href="/grad" title="" target="_blank">Graduate Seminar</a></li>
                         <li><a href="/acts" title="" target="_blank">Appl. Comput. Topol. Seminar</a></li>
