--- a/undergrad/index.html
+++ b/undergrad/index.html
@@ -198,7 +198,42 @@
 
     <p>
         Sep 19, '24, 
-        <b>Organizational meeting</b>
+        <b>Yifei Zhu</b>, 
+        <a onclick="toggle_visibility('1');">
+            <i>Organizational meeting / introduction: A partial, but motivated view of Higgs bundles</i>
+        </a>
+        <br />
+        <div id="1" class="toshow" style="display:none">
+            <li>Why do we care about them?</li>
+
+            <li>Some specific goals</li>
+
+            <li>Background materials and a plan</li>
+        </div>
+    </p>
+
+    <p>
+        Sep 26, '24, 
+        <b>Pengxu Zhang</b>, 
+        <a onclick="toggle_visibility('2');">
+            <i>An overview of Higgs bundles and their applications</i>
+        </a>
+        <br />
+        <div id="2" class="toshow" style="display:none">
+            <li>Main reference: Laura P. Schaposnik, <a href="https://www.ams.org/journals/notices/202005/rnoti-p625.pdf" target="_blank"><i>Higgs bundles&mdash;recent applications</i></a></li>
+        </div>
+    </p>
+
+    <p>
+        Oct 10, '24, 
+        <b>TBD</b>, 
+        <a onclick="toggle_visibility('3');">
+            <i>TBA</i>
+        </a>
+        <br />
+        <div id="3" class="toshow" style="display:none">
+            
+        </div>
     </p>
 
     
