--- a/undergrad/index.html
+++ b/undergrad/index.html
@@ -223,7 +223,12 @@
                     </li>
 
                     <li>
-                        Higgs bundle: Peter Higgs, 
+                        Higgs bundle $\approx$ family of matrices: <a href="https://mp.weixin.qq.com/s?fallback_from_env=not_support&vid=wxv_3407860455564460033&__biz=MzIwMjk1OTc2MA==&mid=2247546160&idx=1&sn=0d2a70727d4d0face60fc336937197f3" target="_blank">Peter Higgs</a>, 
+                        Nigel Hitchin, Carlos Simpson
+                    </li>
+
+                    <li>
+                        Riemann–Hilbert correspondence (de Rham's theorem, the Poincaré lemma), Simpson correspondence 
                     </li>
                 </ul>
             </li>
