--- a/undergrad/index.html
+++ b/undergrad/index.html
@@ -204,53 +204,55 @@
         </a>
         <br />
         <div id="1" class="toshow" style="display:none">
-            <li>
-                Why do we care about them?
-                <ul>
-                    <li>Vector bundles, parametrized objects, and moduli spaces: tangent bundle, line bundles over $S^1$, moduli of elliptic curves</li>
+            <ul>
+                <li>
+                    Why do we care about them?
+                    <ul>
+                        <li>Vector bundles, parametrized objects, and moduli spaces: tangent bundle, line bundles over $S^1$, moduli of elliptic curves</li>
 
-                    <li>
-                        Motivation from physics (condensed matter and quantum materials): sensing and absorbing devices (<a href="https://youtu.be/DRS02SR4p8s" target="_blank">invisibility cloak</a>, <a href="https://youtu.be/0GaxfZTOW8M" target="_blank">anti-objects</a>), 
-                        optical devices (holography, laser) 
-                    </li>
+                        <li>    
+                            Motivation from physics (condensed matter and quantum materials): sensing and absorbing devices (<a href="https://youtu.be/DRS02SR4p8s" target="_blank">invisibility cloak</a>, <a href="https://youtu.be/0GaxfZTOW8M" target="_blank">anti-objects</a>), 
+                            optical devices (holography, laser) 
+                        </li>
 
-                    <li>Hamiltonian = square matrix with prescribed symmetry (Hermitian, reason), eigenvalue (energy) and eigenvector (state), evolution of eigenstates (or rotation of eigenframe), energy bands</li>
+                        <li>Hamiltonian = square matrix with prescribed symmetry (Hermitian, reason), eigenvalue (energy) and eigenvector (state), evolution of eigenstates (or rotation of eigenframe), energy bands</li>
 
-                    <li>
-                        Examples: Hermitian 2-band system (orthogonal half Möbius bands, classified by $\pi_1(S^1)\cong{\mathbb Z}$) and 3-band system (classified by $\pi_1\Big({\rm SO}(3)\big/\big({\rm O}(1)\times{\rm O}(1)\big)\Big)\cong Q=\{\pm1,\pm i,\pm j,\pm k\}$, see 
-                        <a href="https://doi.org/10.1126/science.aau8740" target="_blank">Wu <i>et al.</i>, <i><b>Science</b></i> 2019</a>), non-Hermitian 2-band system (non-Hermitian = Hermitian with respect to a non-Euclidean Riemannian metric form, reason(s), 
-                        <a href="https://yifeizhu.github.io/swallowtail/rotate.mp4" target="_blank">kissing half Möbius bands</a>) 
-                    </li>
+                        <li>
+                            Examples: Hermitian 2-band system (orthogonal half Möbius bands, classified by $\pi_1(S^1)\cong{\mathbb Z}$) and 3-band system (classified by $\pi_1\Big({\rm SO}(3)\big/\big({\rm O}(1)\times{\rm O}(1)\big)\Big)\cong Q=\{\pm1,\pm i,\pm j,\pm k\}$, see 
+                            <a href="https://doi.org/10.1126/science.aau8740" target="_blank">Wu <i>et al.</i>, <i><b>Science</b></i> 2019</a>), non-Hermitian 2-band system (non-Hermitian = Hermitian with respect to a non-Euclidean Riemannian metric form, reason(s), 
+                            <a href="https://yifeizhu.github.io/swallowtail/rotate.mp4" target="_blank">kissing half Möbius bands</a>) 
+                        </li>
 
-                    <li>
-                        Higgs bundle $\approx$ family of matrices: <a href="https://mp.weixin.qq.com/s?fallback_from_env=not_support&vid=wxv_3407860455564460033&__biz=MzIwMjk1OTc2MA==&mid=2247546160&idx=1&sn=0d2a70727d4d0face60fc336937197f3" target="_blank">Peter Higgs</a>, 
-                        Nigel Hitchin, Carlos Simpson
-                    </li>
+                        <li>
+                            Higgs bundle $\approx$ family of matrices: <a href="https://mp.weixin.qq.com/s?fallback_from_env=not_support&vid=wxv_3407860455564460033&__biz=MzIwMjk1OTc2MA==&mid=2247546160&idx=1&sn=0d2a70727d4d0face60fc336937197f3" target="_blank">Peter Higgs</a>, Nigel Hitchin, 
+                            Carlos Simpson 
+                        </li>
 
-                    <li>
-                        Riemann–Hilbert correspondence (de Rham's theorem, the Poincaré lemma), Simpson correspondence 
-                    </li>
-                </ul>
-            </li>
+                        <li>
+                            Riemann–Hilbert correspondence (de Rham's theorem, the Poincaré lemma), Simpson correspondence 
+                        </li>
+                    </ul>
+                </li>
 
-            <li>
-                Some specific goals: 
-                <ul>
-                    <li>Classification of eigenbundles, up to homotopy</li>
+                <li>
+                    Some specific goals: 
+                    <ul>
+                        <li>Classification of eigenbundles, up to homotopy</li>
 
-                    <li>
-                        Metrics on the base space of a Higgs bundle and non-Hermiticity: hyperbolic metric (<a href="https://doi.org/10.1038/s41586-019-1348-3" target="_blank">Kollár <i>et al.</i>, <i><b>Nature</b></i> 2019</a>; Gothen, 
-                        <a href="https://www.cim.pt/magazines/bulletin/45/article/333/pdf" target="_blank"><i>Geometry on surfaces and Higgs bundles</i></a>) 
-                    </li>
+                        <li>
+                            Metrics on the base space of a Higgs bundle and non-Hermiticity: hyperbolic metric (<a href="https://doi.org/10.1038/s41586-019-1348-3" target="_blank">Kollár <i>et al.</i>, <i><b>Nature</b></i> 2019</a>; Gothen, 
+                            <a href="https://www.cim.pt/magazines/bulletin/45/article/333/pdf" target="_blank"><i>Geometry on surfaces and Higgs bundles</i></a>) 
+                        </li>
 
-                    <li>
-                        Bulk–edge correspondence and (geometric) Langlands correspondence: roles played by Higgs bundles, explicit examples and calculations (Kiezle and Rayan, <a href="https://doi.org/10.1016/j.aim.2022.108664" target="_blank"><i>Hyperbolic band theory through Higgs 
-                        bundles</i></a>) 
-                    </li>
-                </ul>
-            </li>
+                        <li>
+                            Bulk–edge correspondence and (geometric) Langlands correspondence: roles played by Higgs bundles, explicit examples and calculations (Kiezle and Rayan, <a href="https://doi.org/10.1016/j.aim.2022.108664" target="_blank"><i>Hyperbolic band theory through Higgs 
+                            bundles</i></a>) 
+                        </li>
+                    </ul>
+                </li>
 
-            <li>Background materials and a plan</li>
+                <li>Background materials and a plan</li>
+            </ul>
         </div>
     </p>
 
