--- a/undergrad/index.html
+++ b/undergrad/index.html
@@ -212,7 +212,7 @@
 
                         <li>    
                             Motivation from physics (condensed matter and quantum materials): sensing and absorbing devices (<a href="https://youtu.be/DRS02SR4p8s" target="_blank">invisibility cloak</a>, <a href="https://youtu.be/0GaxfZTOW8M" target="_blank">anti-objects</a>), 
-                            optical devices (holography, laser) 
+                            optical devices (holography, laser), materials with exceptional properties not found in nature at the macroscopic level realized by engineering and fine-tuning against degeneracy at the microscopic/quantum level 
                         </li>
 
                         <li>Hamiltonian = square matrix with prescribed symmetry (Hermitian, reason), eigenvalue (energy) and eigenvector (state), evolution of eigenstates (or rotation of eigenframe), energy bands</li>
