--- a/undergrad/index.html
+++ b/undergrad/index.html
@@ -219,7 +219,7 @@
 
                         <li>
                             Examples: Hermitian 2-band system (orthogonal half Möbius bands, classified by $\pi_1(S^1)\cong{\mathbb Z}$) and 3-band system (classified by $\pi_1\Big({\rm SO}(3)\big/\big({\rm O}(1)\times{\rm O}(1)\big)\Big)\cong Q=\{\pm1,\pm i,\pm j,\pm k\}$, see 
-                            <a href="https://doi.org/10.1126/science.aau8740" target="_blank">Wu <i>et al.</i>, <i><b>Science</b></i> 2019</a>), non-Hermitian 2-band system (non-Hermitian = Hermitian with respect to a non-Euclidean Riemannian metric form, reason(s), 
+                            <a href="https://doi.org/10.1126/science.aau8740" target="_blank">Wu <i>et al.</i>, <i><b>Science</b></i> 2019</a>), non-Hermitian 2-band system (non-Hermitian = Hermitian with respect to a non-Euclidean Riemannian metric form, reason(s); stratified space, 
                             <a href="https://yifeizhu.github.io/swallowtail/rotate.mp4" target="_blank">kissing half Möbius bands</a>) 
                         </li>
 
@@ -237,7 +237,7 @@
                 <li>
                     Some specific goals: 
                     <ul>
-                        <li>Classification of eigenbundles, up to homotopy</li>
+                        <li>Classification of eigenbundles, up to homotopy: intersection homology and homotopy</li>
 
                         <li>
                             Metrics on the base space of a Higgs bundle and non-Hermiticity: hyperbolic metric (<a href="https://doi.org/10.1038/s41586-019-1348-3" target="_blank">Kollár <i>et al.</i>, <i><b>Nature</b></i> 2019</a>; Gothen, 
