--- a/undergrad/index.html
+++ b/undergrad/index.html
@@ -254,10 +254,10 @@
                 <li>Background materials and a plan: <a href="GT-student-seminar.pdf" target="_blank">course description for MA423</a></li>
 
                 <li>
-                    Exercise: Compute the eigenbundle for the real matrices $\begin{bmatrix}
+                    Exercise: Compute the eigenbundle for the real matrices $$\begin{bmatrix}
                                                                                 f_1 & f_2 \\
                                                                                 f_2 & -f_1 
-                                                                             \end{bmatrix}$ and verify its relationship to the <i>Hopf bundle</i> $S^0\hookrightarrow S^1\to S^1$.  What about the complex and quaternionic cases?  (Hint: See 
+                                                                              \end{bmatrix}$$ and verify its relationship to the <i>Hopf bundle</i> $S^0\hookrightarrow S^1\to S^1$.  What about the complex and quaternionic cases?  (Hint: See 
                     <a href="https://www.math.uni-tuebingen.de/de/forschung/maphy/personen/dr-barbara-roos/doc/theses/roos_semester_project.pdf" target="_blank">here</a>.)  
                 </li>
             </ul>
