--- a/undergrad/index.html
+++ b/undergrad/index.html
@@ -215,7 +215,7 @@
                             optical devices (holography, laser), materials with exceptional properties not found in nature at the macroscopic level realized by engineering and fine-tuning against degeneracy at the microscopic/quantum level 
                         </li>
 
-                        <li>Hamiltonian = square matrix with prescribed symmetry (Hermitian, reason), eigenvalue (energy) and eigenvector (state), evolution of eigenstates (or rotation of eigenframe), energy bands</li>
+                        <li>Hamiltonian $\stackrel{\rm mathematically}{=}$ square matrix with prescribed symmetry (Hermitian, reason), eigenvalue (energy) and eigenvector (state), evolution of eigenstates (or rotation of eigenframe), energy bands</li>
 
                         <li>
                             Examples: Hermitian 2-band system (orthogonal half Möbius bands, classified by $\pi_1(S^1)\cong{\mathbb Z}$) and 3-band system (classified by $\pi_1\Big({\rm SO}(3)\big/\big({\rm O}(1)\times{\rm O}(1)\big)\Big)\cong Q=\{\pm1,\pm i,\pm j,\pm k\}$, see 
