--- a/undergrad/index.html
+++ b/undergrad/index.html
@@ -218,7 +218,7 @@
                         <li>Hamiltonian $\stackrel{\rm mathematically}{=}$ square matrix with prescribed symmetry (Hermitian, reason), eigenvalue (energy) and eigenvector (state), evolution of eigenstates (or rotation of eigenframe $\leadsto$ eigenbundle), energy bands</li>
 
                         <li>
-                            Examples: Hermitian 2-band system (orthogonal half Möbius bands, classified by $\pi_1(S^1)\cong\!{\mathbb Z}$) and 3-band system (classified by $\pi_1\Big({\rm SO}(3)\big/\big({\rm O}(1)\times{\rm O}(1)\big)\Big)\cong Q=\{\pm1,\pm i,\pm j,\pm k\}$, see 
+                            Examples: Hermitian 2-band system (orthogonal half Möbius bands, classified by $\pi_1(S^1)\cong\!{\mathbb Z}$) and 3-band system (classified by $\pi_1\Big({\rm SO}(3)\big/\big({\rm O}(1)\times{\rm O}(1)\big)\Big)\cong\! Q=\{\pm1,\pm i,\pm j,\pm k\}$, see 
                             <a href="https://doi.org/10.1126/science.aau8740" target="_blank">Wu <i>et al.</i>, <i><b>Science</b></i> 2019</a>), non-Hermitian 2-band system (non-Hermitian = Hermitian with respect to a non-Euclidean Riemannian metric form, reason(s); stratified space, 
                             <a href="https://yifeizhu.github.io/swallowtail/rotate.mp4" target="_blank">kissing half Möbius bands</a>) 
                         </li>
