--- a/undergrad/index.html
+++ b/undergrad/index.html
@@ -235,7 +235,7 @@
                 </li>
 
                 <li>
-                    Some specific goals: 
+                    Some specific goals (or rather questions to keep in mind): 
                     <ul>
                         <li>Classification of eigenbundles, up to homotopy: intersection homology and homotopy</li>
 
