--- a/undergrad/index.html
+++ b/undergrad/index.html
@@ -263,7 +263,8 @@
                 <li>Background materials and a plan: <a href="GT-student-seminar.pdf" target="_blank">course description for MA423</a></li>
 
                 <li>
-                    Exercise: Compute the eigenbundle for the real matrices $\begin{array}{l}f_1 \quad f_2 \\ f_2 \quad -f_1\end{array}$ and verify its relationship to the <i>Hopf bundle</i> $S^0\hookrightarrow S^1\to S^1$.  What about the complex and quaternionic cases?  (Hint: See 
+                    Exercise: Compute the eigenbundle for the real matrices $\begin{array}{l}f_1 \quad f_2 \\ f_2 \quad -f_1\end{array}$ <br /> and verify its relationship to 
+                    the <i>Hopf bundle</i> $S^0\hookrightarrow S^1\to S^1$.  What about the complex and quaternionic cases?  (Hint: See 
                     <a href="https://www.math.uni-tuebingen.de/de/forschung/maphy/personen/dr-barbara-roos/doc/theses/roos_semester_project.pdf" target="_blank">here</a>.)  
                 </li>
             </ul>
@@ -278,7 +279,10 @@
         </a>
         <br />
         <div id="2" class="toshow" style="display:none">
-            <li>Main reference: Laura P. Schaposnik, <a href="https://www.ams.org/journals/notices/202005/rnoti-p625.pdf" target="_blank"><i>Higgs bundles&mdash;recent applications</i></a></li>
+            <li>
+                Main reference: Laura P. Schaposnik, <a href="https://www.ams.org/journals/notices/202005/rnoti-p625.pdf" target="_blank"><i>Higgs bundles&mdash;recent 
+                applications</i></a> 
+            </li>
         </div>
     </p>
 
