--- a/grad/index.html
+++ b/grad/index.html
@@ -181,12 +181,16 @@
         Sep 23, '24, 
         <b>Yifan Wu</b>, 
         <a onclick="toggle_visibility('26');">
-        <i> When does K(n)^*BG concentrate in even degrees?</i></a><br />
+        <i> When does $K(n)^*BG$ concentrate in even degrees?</i></a><br />
         <div id="26" class="toshow" style="display:none">
             <li>
              Concentrating in even degrees is a nice property for cohomology rings. For example, it will lead to the collapses of spectral sequences  in certain cases. 
-                In the first part of the talk, I will introduce the notion of good groups [HKR00], which satisfy the property as stated in the title.
-                Then I will try to generalize these ideas from K(n) to other field spectra.
+                In the first part of the talk, I will introduce the notion of good groups $G$, which satisfy the property as stated in the title.
+                Then I will try to generalize these ideas from $K(n)$ to other field spectra.
+            </li>
+
+            <li>
+                Main reference: Michael J. Hopkins, Nicholas J. Kuhn, and Douglas C. Ravenel, <a href="https://www.ams.org/journals/jams/2000-13-03/S0894-0347-00-00332-5/S0894-0347-00-00332-5.pdf" target="_blank"><i>Generalized group characters and complex oriented cohomology theories</i></a>
             </li>
             
         </div>
