--- a/grad/index.html
+++ b/grad/index.html
@@ -181,7 +181,7 @@
         Sep 23, '24, 
         <b>Yifan Wu</b>, 
         <a onclick="toggle_visibility('26');">
-        <i> When does $K(n)^*BG$ concentrate in even degrees?</i></a><br />
+        <i> When does $K(n)^*(BG)$ concentrate in even degrees?</i></a><br />
         <div id="26" class="toshow" style="display:none">
             <li>
                 Concentrating in even degrees is a nice property for cohomology rings.  For example, it will lead to the 
