--- a/grad/index.html
+++ b/grad/index.html
@@ -190,6 +190,8 @@
                 ideas from $K(n)$ to other field spectra.  
             </li>
 
+            <li><a href="https://wuyf19970105.github.io/files/Good_Groups_and_Cohomology_Concentrated_in_Degrees.pdf" target="_blank">Notes</a></li>
+
             <li>
                 Main reference: Michael J. Hopkins, Nicholas J. Kuhn, and Douglas C. Ravenel, 
                 <a href="https://doi.org/10.1090/S0894-0347-00-00332-5" target="_blank"><i>Generalized group characters and 
