--- a/grad/index.html
+++ b/grad/index.html
@@ -181,13 +181,12 @@
         Sep 23, '24, 
         <b>Yifan Wu</b>, 
         <a onclick="toggle_visibility('26');">
-        <i> When does $K(n)^*(BG)$ concentrate in even degrees?</i></a><br />
+        <i> When is $K(n)^*(BG)$ concentrated in even degrees?</i></a><br />
         <div id="26" class="toshow" style="display:none">
             <li>
-                Concentrating in even degrees is a nice property for cohomology rings.  For example, it will lead to the 
-                collapses of spectral sequences in certain cases.  In the first part of the talk, I will introduce the notion 
-                of good groups $G$, which satisfy the property as stated in the title.  Then I will try to generalize these 
-                ideas from $K(n)$ to other field spectra.  
+                Being concentrated in even degrees is a nice property for cohomology rings.  For example, it will lead to the collapses of spectral sequences in certain 
+                cases.  In the first part of the talk, I will introduce the notion of good groups $G$, which satisfy the property as stated in the title.  Then I will try 
+                to generalize these ideas from $K(n)$ to other field spectra.  
             </li>
 
             <li><a href="https://wuyf19970105.github.io/files/Good_Groups_and_Cohomology_Concentrated_in_Degrees.pdf" target="_blank">Notes</a></li>
