--- a/undergrad/index.html
+++ b/undergrad/index.html
@@ -264,11 +264,7 @@
 
                 <li>
                     Exercise: Compute the eigenbundle for the real matrices 
-                    $\\begin{bmatrix}
-  f_1 & f_2 \\\\
-  f_2 & -f_1
-\\end{bmatrix}$
-<!--                    $f_1~~~~~f_2\choose f_2~~-f_1$ -->
+                    $f_1~~~~~f_2\choose f_2~~-f_1$ 
                     and find its relationship to the <i>Hopf bundle</i> 
                     $S^0\hookrightarrow S^1\to S^1$.  What about the complex and quaternionic cases?  (Hint: See 
                     <a href="https://www.math.uni-tuebingen.de/de/forschung/maphy/personen/dr-barbara-roos/doc/theses/roos_semester_project.pdf" target="_blank">here</a>.)  
