--- a/undergrad/index.html
+++ b/undergrad/index.html
@@ -264,7 +264,7 @@
 
                 <li>
                     Exercise: Compute the eigenbundle for the real matrices 
-                    $$ \left[\begin{array} {cc} f_1 & f_2 \\\\ f_2 & -f_1 \end{array}\right] $$
+                    $$ \left[\begin{array} {cc} f_1 & f_2 \ f_2 & -f_1 \end{array}\right] $$
                     <!--
                     $f_1~~~~~f_2\choose f_2~~-f_1$ 
                     -->
