[Replace] KaTeX with MathJax in `/undergrad/index.html`
KaTeX has problem rendering matrices
due to conflicts with `/css/base.css`
(which is from [Philosophy](https://colorlib.com/wp/template/philosophy/) theme),
replaced it with MathJax CommonHTML rendering instead.

This is a temporary fix.

--- a/undergrad/index.html
+++ b/undergrad/index.html
@@ -34,28 +34,24 @@
     }
 //-->
 </script>
-
-     <!-- Katex
-    ================================================== -->
-<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/katex@0.13.11/dist/katex.min.css" integrity="sha384-Um5gpz1odJg5Z4HAmzPtgZKdTBHZdw8S29IecapCSB31ligYPhHQZMIlWLYQGVoc" crossorigin="anonymous">
-<script defer src="https://cdn.jsdelivr.net/npm/katex@0.13.11/dist/katex.min.js" integrity="sha384-YNHdsYkH6gMx9y3mRkmcJ2mFUjTd0qNQQvY9VYZgQd7DcN7env35GzlmFaZ23JGp" crossorigin="anonymous"></script>
-<script defer src="https://cdn.jsdelivr.net/npm/katex@0.13.11/dist/contrib/auto-render.min.js" integrity="sha384-vZTG03m+2yp6N6BNi5iM4rW4oIwk5DfcNdFfxkk9ZWpDriOkXX8voJBFrAO7MpVl" crossorigin="anonymous"></script>
 <script>
-    document.addEventListener("DOMContentLoaded", function() {
-        renderMathInElement(document.body, {
-          // customised options
-          // • auto-render specific keys, e.g.:
-          delimiters: [
-              {left: '$$', right: '$$', display: true},
-              {left: '$', right: '$', display: false},
-              {left: '\\(', right: '\\)', display: false},
-              {left: '\\[', right: '\\]', display: true}
-          ],
-          // • rendering keys, e.g.:
-          throwOnError : false
-        });
-    });
-</script>    
+    window.MathJax = {
+        tex: {
+            inlineMath: [['$', '$'], ['\\(', '\\)']]
+        },
+        chtml: {
+            fontCache: 'global'
+        }
+    };
+
+    (function () {
+        var script = document.createElement('script');
+        script.src = 'https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-chtml.js';
+        script.async = true;
+        document.head.appendChild(script);
+    })();
+</script>
+</head>
 
 <body id="top">
 
@@ -264,7 +260,7 @@
 
                 <li>
                     Exercise: Compute the eigenbundle for the real matrices 
-                    $f_1~~~~~f_2\choose f_2~~-f_1$ 
+                    $\begin{bmatrix} f_1 & f_2 \\ f_2 & -f_1 \end{bmatrix}$ 
                     and find its relationship to the <i>Hopf bundle</i> 
                     $S^0\hookrightarrow S^1\to S^1$.  What about the complex and quaternionic cases?  (Hint: See 
                     <a href="https://www.math.uni-tuebingen.de/de/forschung/maphy/personen/dr-barbara-roos/doc/theses/roos_semester_project.pdf" target="_blank">here</a>.)  
