[Add] MathJax support for TeX displayed math delimiters

--- a/undergrad/index.html
+++ b/undergrad/index.html
@@ -38,7 +38,8 @@
     <script>
         window.MathJax = {
             tex: {
-                inlineMath: [['$', '$'], ['\\(', '\\)']]
+                inlineMath: [['$', '$'], ['\\(', '\\)']],
+                displayMath: [['$$', '$$'], ['\\[', '\\]']]
             },
             chtml: {
                 fontCache: 'global'
