--- a/undergrad/index.html
+++ b/undergrad/index.html
@@ -236,8 +236,8 @@
 
                             <li>
                                 Examples: Hermitian 2-band system (orthogonal half Möbius bands, classified by
-                                $\pi_1(S^1)\cong\!{\mathbb Z}$) and 3-band system (classified by
-                                $\pi_1\Big({\rm SO}(3)\big/\big({\rm O}(1)\times{\rm O}(1)\big)\Big)\cong\! Q=\{\pm1,\pm
+                                $\pi_1(S^1)\cong{\mathbb Z}$) and 3-band system (classified by
+                                $\pi_1\Big({\rm SO}(3)\big/\big({\rm O}(1)\times{\rm O}(1)\big)\Big)\cong Q=\{\pm1,\pm
                                 i,\pm j,\pm k\}$, see
                                 <a href="https://doi.org/10.1126/science.aau8740" target="_blank">Wu <i>et al.</i>,
                                     <b>Science</b> 2019</a>), non-Hermitian 2-band system
