--- a/undergrad/index.html
+++ b/undergrad/index.html
@@ -286,12 +286,8 @@
                             description for MA423</a></li>
 
                     <li>
-                        Exercise: Compute the eigenbundle for the real matrices
-                        $\begin{bmatrix} f_1 & f_2 \\ f_2 & -f_1 \end{bmatrix}$
-                        and find its relationship to the <i>Hopf bundle</i>
-                        $S^0\hookrightarrow S^1\to S^1$. What about the complex and quaternionic cases? (Hint: See
-                        <a href="https://www.math.uni-tuebingen.de/de/forschung/maphy/personen/dr-barbara-roos/doc/theses/roos_semester_project.pdf"
-                            target="_blank">here</a>.)
+                        Exercise: Compute the eigenbundle for the real matrices $$\begin{bmatrix} f_1 & f_2 \\ f_2 & -f_1 \end{bmatrix}$$ [<a href="24fal/2b-herm.pdf" target="_blank">a solution</a>] and find its relationship to the <i>Hopf bundle</i> $S^0\hookrightarrow S^1\to S^1$.  What 
+                        about the complex and quaternionic (and octonionic) cases?  (Hint: See <a href="https://www.math.uni-tuebingen.de/de/forschung/maphy/personen/dr-barbara-roos/doc/theses/roos_semester_project.pdf" target="_blank">here</a>.)  
                     </li>
                 </ul>
             </div>
@@ -301,16 +297,19 @@
                 Sep 26, '24,
                 <b>Pengxu Zhang</b>,
                 <a onclick="toggle_visibility('2');">
-                    <i>An overview of Higgs bundles and their applications</i>
+                    <i>Overview of Higgs bundles through the lens of moduli spaces</i>
                 </a>
                 <br />
             <div id="2" class="toshow" style="display:none">
-                <li>
-                    Main reference: Laura P. Schaposnik, <a
-                        href="https://www.ams.org/journals/notices/202005/rnoti-p625.pdf" target="_blank"><i>Higgs
-                            bundles&mdash;recent
-                            applications</i></a>
-                </li>
+                <ol>
+                    <li>Hodge theory and Riemann–Hilbert correspondence</li>
+
+                    <li>Nonabelian Hodge correspondence and applications</li>
+                </ol>
+                
+                <li>Main reference: Laura P. Schaposnik, <a href="https://www.ams.org/journals/notices/202005/rnoti-p625.pdf" target="_blank"><i>Higgs bundles&mdash;recent applications</i></a></li>
+
+                <li><a href="24fal/0926-Zhang.pdf" target="_blank">Notes</a></li>
             </div>
             </p>
 
