--- a/undergrad/index.html
+++ b/undergrad/index.html
@@ -287,7 +287,7 @@
 
                     <li>
                         Exercise: Compute the eigenbundle for the real matrices $$\begin{bmatrix} f_1 & f_2 \\ f_2 & -f_1 \end{bmatrix}$$ [<a href="24fal/2b-herm.pdf" target="_blank">a solution</a>] and find its relationship to the <i>Hopf bundle</i> $S^0\hookrightarrow S^1\to S^1$.  What 
-                        about the complex and quaternionic (and octonionic) cases?  (Hint: See <a href="https://www.math.uni-tuebingen.de/de/forschung/maphy/personen/dr-barbara-roos/doc/theses/roos_semester_project.pdf" target="_blank">here</a>.)  
+                        about the complex and quaternionic (and octonionic) cases?  Hint: See <a href="https://www.math.uni-tuebingen.de/de/forschung/maphy/personen/dr-barbara-roos/doc/theses/roos_semester_project.pdf" target="_blank">here</a>.  
                     </li>
                 </ul>
             </div>
@@ -363,6 +363,9 @@
                         Cover illustration of a rank-2 Higgs bundle by Elliot Kienzle from
                         <a href="https://doi.org/10.1016/j.aim.2022.108664" target="_blank"><i>Hyperbolic band theory
                                 through Higgs bundles</i></a>.
+                    </span>
+                    <span>
+                        Special thanks to <a href="https://ac.jackywang.page/" target="_blank">Mingjie Wang</a> for formatting this page.  
                     </span>
                 </div>
 
