--- a/grad/index.html
+++ b/grad/index.html
@@ -178,6 +178,22 @@
 -->
 
     <p>
+        Sep 30, '24, 
+        <b>Chunshuang Yin</b>, 
+        <a onclick="toggle_visibility('27');">
+        <i>  An introduction to toric Varieties </i></a><br />
+        <div id="27" class="toshow" style="display:none">
+            <li>
+                Toric varieties are a class of algebraic varieties. They can be seen as algebraic torus with added limit points such that the torus is dense within them, 
+                and their action is extendable throughout the whole variety. Toric varieties have wide-ranging applications across many areas of mathematics.
+                Due to their explicit combinatorial descriptions and rich structures, they serve as the "geometric stage" for various mathematical theories and some areas of theoretical physics. 
+                In this talk, I will start by discussing three equivalent descriptions of affine toric to introduce a construction method for general toric varieties.             
+            </li>           
+        </div>
+    </p>
+
+    
+    <p>
         Sep 23, '24, 
         <b>Yifan Wu</b>, 
         <a onclick="toggle_visibility('26');">
