--- a/grad/index.html
+++ b/grad/index.html
@@ -181,7 +181,7 @@
         Sep 30, '24, 
         <b>Chunshuang Yin</b>, 
         <a onclick="toggle_visibility('27');">
-        <i>  An introduction to toric Varieties </i></a><br />
+        <i>  An introduction to toric varieties </i></a><br />
         <div id="27" class="toshow" style="display:none">
             <li>
                 Toric varieties are a class of algebraic varieties. They can be seen as algebraic torus with added limit points such that the torus is dense within them, 
