--- a/grad/index.html
+++ b/grad/index.html
@@ -220,7 +220,7 @@
                 <a href="https://link.springer.com/article/10.1365/s13291-012-0048-9" target="_blank"><i>Toric Varieties</i></a> 
             </li>
             
-             <li><a href="24fal/0930-Yin.pdf" target="_blank">Notes/slides</a></li>
+             <li><a href="24fal/0930-Yin.pdf" target="_blank">Slides</a></li>
         </div>
     </p>
 
