--- a/grad/index.html
+++ b/grad/index.html
@@ -216,7 +216,7 @@
             </li> 
             
              <li>
-                Main reference: David A. Cox, John B. Little, Henry K. Schenck, 
+                Main reference: David A. Cox, John B. Little and Henry K. Schenck, 
                 <a href="https://link.springer.com/article/10.1365/s13291-012-0048-9" target="_blank"><i>Toric Varieties</i></a> 
             </li>
             
