--- a/grad/index.html
+++ b/grad/index.html
@@ -228,7 +228,15 @@
         Oct 14, '24, 
         <b>Zeyang Ding</b>, 
         <a onclick="toggle_visibility('28');">
-        <i>  TBA </i></a><br />
+        <i>  The space of persistence diagrams on n points coarsely embeds into Hilbert space </i></a><br />
+        <div id="28" class="toshow" style="display:none">
+            <li>
+             In this talk, we prove that the space of persistence diagrams on $n$ points (with the bottleneck or a Wasserstein distance) coarsely embeds into Hilbert space by showing it is of asymptotic dimension $2n$. 
+             Such an embedding enables utilization of Hilbert space techniques on the space of persistence diagrams. We also prove that when the number of points is not bounded, the corresponding spaces of persistence 
+             diagrams do not have finite asymptotic dimension. Furthermore, in the case of the bottleneck distance, the corresponding space does not coarsely embed into Hilbert space. 
+            </li> 
+            
+        </div>
     </p>
     
 <h3>Talks in Spring 2024 (mostly Tuesdays 4:20 in M5024)</h3>
