--- a/grad/index.html
+++ b/grad/index.html
@@ -235,7 +235,8 @@
              Such an embedding enables utilization of Hilbert space techniques on the space of persistence diagrams. We also prove that when the number of points is not bounded, the corresponding spaces of persistence 
              diagrams do not have finite asymptotic dimension. Furthermore, in the case of the bottleneck distance, the corresponding space does not coarsely embed into Hilbert space. 
             </li> 
-            
+
+            <li><a href="24fal/1014-Ding.pdf" target="_blank">Slides</a></li>
         </div>
     </p>
     
