--- a/grad/index.html
+++ b/grad/index.html
@@ -148,7 +148,7 @@
 <h3>About</h3>
 
     <p>
-        This is a graduate-level seminar on algebraic and geometric topology.  Topics are selected from common interests of the participants.  
+        This is a graduate-level seminar on topology and related fields.  Topics are selected from common interests of the participants.  
         <a href="http://dx.doi.org/10.1090/noti941" target="_blank">Here</a> are some general suggestions on how to give a good talk.  
     </p>
 <!--
