--- a/undergrad/index.html
+++ b/undergrad/index.html
@@ -306,23 +306,35 @@
 
                     <li>Nonabelian Hodge correspondence and applications</li>
                 </ol>
-                
+            <!--    
                 <li>Main reference: Laura P. Schaposnik, <a href="https://www.ams.org/journals/notices/202005/rnoti-p625.pdf" target="_blank"><i>Higgs bundles&mdash;recent applications</i></a></li>
 
                 <li><a href="24fal/0926-Zhang.pdf" target="_blank">Notes</a></li>
+            -->
             </div>
             </p>
 
             <p>
                 Oct 10, '24,
-                <b>TBD</b>,
+                <b>Weitong Wei</b>,
                 <a onclick="toggle_visibility('3');">
-                    <i>TBA</i>
+                    <i>Background for ingredients in the definition of a Higgs bundle</i>
                 </a>
                 <br />
             <div id="3" class="toshow" style="display:none">
+                <ol>
+                    <li>Complex manifold</li>
 
+                    <li>Holomorphic vector bundle</li>
+
+                    <li>Degree of a vector bundle</li>
+                </ol>
             </div>
+            </p>
+
+            <p>
+                Oct 17, '24,
+                <b>No seminar</b>
             </p>
 
 
