--- a/undergrad/index.html
+++ b/undergrad/index.html
@@ -337,6 +337,22 @@
                 <b>No seminar</b>
             </p>
 
+            <p>
+                Oct 24, '24,
+                <b>Weitong Wei</b>,
+                <a onclick="toggle_visibility('4');">
+                    <i>Background for ingredients in the definition of a Higgs bundle, II</i>
+                </a>
+                <br />
+            <div id="4" class="toshow" style="display:none">
+                <ol>
+                    <li>Degree of a vector bundle, cont'd</li>
+
+                    <li>Sheaves and cohomology</li>
+                </ol>
+            </div>
+            </p>
+
 
             <h3><a id="P"></a>Previous Semesters</h3>
             <li><a href="23fal" target="_blank">Fall 2023</a>, Modular curves</li>
