--- a/undergrad/index.html
+++ b/undergrad/index.html
@@ -348,7 +348,9 @@
                 <ol>
                     <li>Degree of a vector bundle, cont'd</li>
 
-                    <li>Sheaves and cohomology</li>
+                    <li>The moduli space ${\mathscr N}_{n,d}^g$ of (stable) holomorphic vector bundles on a Riemann surface</li>
+
+                    <li>The moduli space ${\mathscr M}_{n,d}^g$ of (stable) Higgs bundles</li>
                 </ol>
             </div>
             </p>
