--- a/grad/index.html
+++ b/grad/index.html
@@ -228,7 +228,7 @@
         Oct 14, '24, 
         <b>Zeyang Ding</b>, 
         <a onclick="toggle_visibility('28');">
-        <i>  The space of persistence diagrams on n points coarsely embeds into Hilbert space </i></a><br />
+        <i>  The space of persistence diagrams on $n$ points coarsely embeds into Hilbert space </i></a><br />
         <div id="28" class="toshow" style="display:none">
             <li>
              In this talk, we prove that the space of persistence diagrams on $n$ points (with the bottleneck or a Wasserstein distance) coarsely embeds into Hilbert space by showing it is of asymptotic dimension $2n$. 
@@ -242,6 +242,20 @@
 
     <p>
         Oct 28, '24, 
+        <b>Yingming Zhang</b>, 
+        <a onclick="toggle_visibility('29');">
+        <i>  Period Polynomials and the Eichler-Shimura isomorphism </i></a><br />
+        <div id="29" class="toshow" style="display:none">
+            Period polynomials and their coefficients have significant impact on the theory of modular forms. The coefficients of period polynomials 
+            are certain special values of L-functions.And one can show that there is an isomorphism between two copies of space of cusp forms and the
+            cohomology group of period polynomials,i.e. the Eichler-Shimura isomorphism. I will introduce the basic properties of the theory of the
+            holomorphic and meromorphic modular forms and describe an example of the cohomology group.       
+        </div>
+    </p>
+
+    
+    <p>
+        Nov 4, '24, 
         <b>Qingrui Qu</b>, 
         <i>Perspectives from differential and algebraic geometry on ruled surfaces</i>
     </p>
