--- a/acts/index.html
+++ b/acts/index.html
@@ -158,6 +158,15 @@
         at 3 pm in M5024</b>.  
     </p>
 
+
+<h3>Conference</h3>
+            
+    <p>
+        There will be a Great Bay Area Topology Conference on topological data analysis and deep learning from November 22 to 24, 2024 at SUSTech.  More information is 
+        upcoming.  
+    </p>
+
+
 <!--
 <h3><a id="P"></a>Presentations and Discussions</h3>
 
